// h 20181204
//
// Video Thumb Service
syntax = "proto3";

package video;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

/*
message HealthRequest {}*/
message HealthResponse {
  bytes health = 1;
}

message ThumbRequest {
  string r = 1;
  string t = 2;
  string w = 3;
  string h = 4;
}

message ThumbResponse {
  bytes thumb = 1;
}

message MetaRequest {
  string r = 1;
}

message MetaResponse {
  bytes meta = 1;
}

service VdoThuService {
  rpc Health(/*HealthRequest*/google.protobuf.Empty) returns (/*stream */HealthResponse) {
    option (google.api.http) = {
      post: "/health"
      body: "*"
    };
  }
  rpc Thumb(ThumbRequest) returns (ThumbResponse) {
    option (google.api.http) = {
      post: "/thumb"
      body: "*"
      additional_bindings {
        get: "/thumb"
      }
    };
  }
  rpc Meta(MetaRequest) returns (MetaResponse) {
    option (google.api.http) = {
      post: "/meta"
      body: "*"
    };
  }
}